--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "jspdf": "^3.0.4",
+    "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.513.0",
     "next-themes": "^0.4.6",
     "pdf-lib": "^1.17.1",
